[package]
name = "solders"
version = "0.14.4"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python binding to the Solana Rust SDK"
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solders"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true, features = ["macros", "extension-module", "abi3-py37"] }
solana-sdk = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dict_derive = "0.4.0"
serde_with = { workspace = true }
base64 = { workspace = true }
camelpaste = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
pythonize = { workspace = true }
solders-traits = { workspace = true }
solders-macros = { workspace = true }
solders-primitives = { workspace = true }
solders-account = { workspace = true }
solders-account-decoder = { workspace = true }
solders-rpc-filter = { workspace = true }
solders-rpc-config = { workspace = true }
solders-rpc-common = { workspace = true }
solders-rpc-errors = { workspace = true }
solders-rpc-requests = { workspace = true }
solders-transaction-status = { workspace = true }
solana-program-test = { workspace = true, optional = true }
solana-banks-client = { workspace = true, optional = true }
solana-banks-interface = { version = "1.15.2", optional = true}
tarpc = { version = "0.29.0", optional = true }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }

[features]
default = ["bankrun"]
bankrun = [
    "dep:solana-program-test",
    "dep:solana-banks-client",
    "dep:solana-banks-interface",
    "dep:tarpc",
    "solders-traits/banks-client"
]


[workspace]
members = [
    ".",
    "traits",
    "macros",
    "primitives",
    "account-decoder",
    "transaction-status",
    "rpc-filter",
    "rpc-config",
    "rpc-common",
    "rpc-errors",
    "rpc-requests",
    "account",
]

[workspace.dependencies]
pyo3 = { version = "0.18.0", default-features = false }
solders-macros = { path = "./macros", version = "0.14.4" }
solders-traits = { path = "./traits", version = "0.14.4" }
solders-account-decoder = { path = "./account-decoder", version = "0.14.4" }
solders-transaction-status = { path = "./transaction-status", version = "0.14.4" }
solders-rpc-filter = { path = "./rpc-filter", version = "0.14.4" }
solders-rpc-config = { path = "./rpc-config", version = "0.14.4" }
solders-rpc-common = { path = "./rpc-common", version = "0.14.4" }
solders-rpc-errors = { path = "./rpc-errors", version = "0.14.4" }
solders-rpc-requests = { path = "./rpc-requests", version = "0.14.4" }
solders-primitives = { path = "./primitives", version = "0.14.4" }
solders-account = { path = "./account", version = "0.14.4" }
serde_with = { version = "^1.14.0", features = ["base64"] }
solana-sdk = "^1.15.2"
bincode = "1.3.3"
base64 = "0.13.0"
serde = "^1.0.136"
serde_json = "^1.0.59"
serde_cbor = "^0.11.2"
derive_more = "0.99.17"
solana-program-test = "1.15.2"
solana-banks-client = "1.15.2"
pythonize = "0.18.0"
bs58 = "0.4.0"
thiserror = "^1.0.31"
camelpaste = "0.1.0"
