[package]
name = "solders"
version = "0.14.4"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python binding to the Solana Rust SDK"
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solders"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true, features = ["macros", "extension-module", "abi3-py37"] }
solana-sdk = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
dict_derive = "0.4.0"
derive_more = { workspace = true }
solders-traits = { workspace = true }
solders-primitives = { workspace = true }
solders-account = { workspace = true }
solders-account-decoder = { workspace = true }
solders-commitment-config = { workspace = true }
solders-rpc-filter = { workspace = true }
solders-rpc-config = { workspace = true }
solders-rpc-errors = { workspace = true }
solders-rpc-requests = { workspace = true }
solders-rpc-responses = { workspace = true }
solders-pubkey = { workspace = true }
solders-instruction = { workspace = true }
solders-message = { workspace = true }
solders-address-lookup-table-account = { workspace = true }
solders-signature = { workspace = true }
solders-transaction-status = { workspace = true }
solders-hash = { workspace = true }
solders-keypair = { workspace = true }
solders-transaction = { workspace = true }
solders-bankrun = { workspace = true, optional = true }

[features]
default = ["bankrun"]
bankrun = ["dep:solders-bankrun"]


[workspace]
members = [
    ".",
    "crates/*"
]

[workspace.dependencies]
pyo3 = { version = "0.18.0", default-features = false }
solders-macros = { path = "./crates/macros", version = "0.14.4" }
solders-traits = { path = "./crates/traits", version = "0.14.4" }
solders-traits-core = { path = "./crates/traits-core", version = "0.14.4" }
solders-account-decoder = { path = "./crates/account-decoder", version = "0.14.4" }
solders-bankrun = { path = "./crates/bankrun", version = "0.14.4" }
solders-commitment-config = { path = "./crates/commitment-config", version = "0.14.4" }
solders-transaction-status = { path = "./crates/transaction-status", version = "0.14.4" }
solders-transaction-status-enums = { path = "./crates/transaction-status-enums", version = "0.14.4" }
solders-rpc-filter = { path = "./crates/rpc-filter", version = "0.14.4" }
solders-rpc-config = { path = "./crates/rpc-config", version = "0.14.4" }
solders-rpc-common = { path = "./crates/rpc-common", version = "0.14.4" }
solders-rpc-errors = { path = "./crates/rpc-errors", version = "0.14.4" }
solders-rpc-requests = { path = "./crates/rpc-requests", version = "0.14.4" }
solders-rpc-responses = { path = "./crates/rpc-responses", version = "0.14.4" }
solders-rpc-responses-common = { path = "./crates/rpc-responses-common", version = "0.14.4" }
solders-rpc-responses-tx-status = { path = "./crates/rpc-responses-tx-status", version = "0.14.4" }
solders-rpc-response-data-boilerplate = { path = "./crates/rpc-response-data-boilerplate", version = "0.14.4" }
solders-rpc-version = { path = "./crates/rpc-version", version = "0.14.4" }
solders-primitives = { path = "./crates/primitives", version = "0.14.4" }
solders-pubkey = { path = "./crates/pubkey", version = "0.14.4" }
solders-instruction = { path = "./crates/instruction", version = "0.14.4" }
solders-address-lookup-table-account = { path = "./crates/address-lookup-table-account", version = "0.14.4" }
solders-message = { path = "./crates/message", version = "0.14.4" }
solders-signature = { path = "./crates/signature", version = "0.14.4" }
solders-keypair = { path = "./crates/keypair", version = "0.14.4" }
solders-transaction = { path = "./crates/transaction", version = "0.14.4" }
solders-transaction-error = { path = "./crates/transaction-error", version = "0.14.4" }
solders-account = { path = "./crates/account", version = "0.14.4" }
solders-hash = { path = "./crates/hash", version = "0.14.4" }
serde_with = { version = "^1.14.0", features = ["base64"] }
solana-sdk = "1.15.2"
solana-program = "1.15.2"
bincode = "1.3.3"
base64 = "0.13.0"
serde = "^1.0.136"
serde_json = "^1.0.59"
serde_cbor = "^0.11.2"
derive_more = "0.99.17"
solana-program-test = "1.15.2"
solana-banks-client = "1.15.2"
pythonize = "0.18.0"
bs58 = "0.4.0"
thiserror = "^1.0.31"
camelpaste = "0.1.0"
