[tool.poetry]
name = "solders"
version = "0.26.0"
description = "Python bindings for Solana Rust tools"
authors = ["kevinheavey <kevinheavey123@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.0"
maturin = "1.8.1"
pybip39 = "0.1.0"
based58 = "0.1.1"
bumpversion = "0.6.0"
"jsonalias" = "0.1.1"
ruff = "0.1.6"
mnemonic = "0.20"
mypy = "0.991"
pytest = "7.2.1"
myst-parser = "^1.0.0"

[build-system]
requires = ["maturin>=1.8.1,<1.9"]
build-backend = "maturin"


[project]
name = "solders"
version = "0.26.0"
description = "Python bindings for Solana Rust tools"
authors = [ {name = "kevinheavey", email = "kevinheavey123@gmail.com"} ]
license = {file = "LICENSE"} # relative to the package/ directory
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typing-extensions >=4.2.0", "jsonalias ==0.1.1"]

[project.urls]
homepage = "https://github.com/kevinheavey/solders"
documentation = "https://kevinheavey.github.io/solders/"
repository = "https://github.com/kevinheavey/solders"
changelog = "https://github.com/kevinheavey/solders/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"

[tool.pyright]
reportMissingModuleSource = false

[tool.ruff]
line-length = 88
select = ["A", "B", "D", "E", "F", "I", "ARG", "BLE", "C4", "SIM", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = ["D100", "D104", "D203", "PLE0604", "PLE0605", "PLR0913"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"

[tool.ruff.per-file-ignores]
"src/solana/blockhash.py" = ["A003"]
"tests/**/*.py" = ["D100", "D103", "D104", "E501", "ARG001", "PLR2004"]
"python/solders/*.pyi" = ["D", "ARG", "A"]
"python/solders/__init__.py" = ["D104", "F401"]
"python/solders/system_program.py" = ["D100", "I001"]

[tool.ruff.pydocstyle]
convention = "google"
