[package]
name = "solders-primitives"
version = "0.10.0"
edition = "2021"
include = ["/src"]
description = "Core types for the Solders project."
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
solders-traits = { workspace = true }
solders-macros = { workspace = true }
solana-sdk = "^1.14.1"
bincode = "^1.3.3"
serde = "^1.0.136"
serde_json = "^1.0.59"
serde_cbor = "^0.11.2"
base64 = "^0.13.0"
derive_more = "0.99.17"
serde_with = { workspace = true }