[package]
name = "solders-primitives"
version = "0.14.3"
edition = "2021"
include = ["/src"]
description = "Core types for the Solders project."
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits = { workspace = true }
solders-macros = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
derive_more = { workspace = true }
serde_with = { workspace = true }
bincode = { workspace = true }
