[package]
name = "solders-rpc-errors"
version = "0.14.4"
edition = "2021"
include = ["/src"]
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-macros = { workspace = true }
solders-traits = { workspace = true }
solders-transaction-status = { workspace = true }
solders-rpc-common = { workspace = true }
solana-sdk = { workspace = true }
