[package]
name = "solders-traits"
version = "0.10.0"
edition = "2021"
include = ["/src"]
description = "A collection of traits and helpers for Solders."
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { version = "0.17.1", default-features = false }
solana-sdk = "^1.14.1"
bincode = "^1.3.3"
serde = "^1.0.136"
serde_json = "^1.0.59"
serde_cbor = "^0.11.2"
