[package]
name = "solders-traits"
version = "0.14.2"
edition = "2021"
include = ["/src"]
description = "A collection of traits and helpers for Solders."
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
solana-sdk = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }