[package]
name = "solders-account-decoder"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
pythonize = { workspace = true }
solders-macros = { workspace = true }
zstd = "0.11.2"
base64 = { workspace = true }
bs58 = { workspace = true }
solders-traits-core = { workspace = true }
solana-account-decoder = { workspace = true }
