
[package]
name = "solders-account-decoder"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders account decoder crate."

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
pyo3 = { workspace = true, features = ["macros"] }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
zstd = "0.11.2"
