[package]
name = "solders-account"
version = "0.14.4"
edition = "2021"
include = ["/src"]
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solana-sdk = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solders-traits-core = { workspace = true }
solana-account-decoder = { workspace = true }
solders-account-decoder = { workspace = true }
base64 = { workspace = true }
