[package]
name = "solders-account"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solana-sdk = { workspace = true }
solders-macros = { workspace = true }
solders-pubkey = { workspace = true }
solders-traits-core = { workspace = true }
solana-account-decoder = { workspace = true }
solders-account-decoder = { workspace = true }
base64 = { workspace = true }
