
[package]
name = "solders-address-lookup-table-account"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders address lookup table account crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-pubkey = { workspace = true }
