
[package]
name = "solders-address-lookup-table-account"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders address lookup table account crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solana-address-lookup-table-interface = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-slot-hashes = { workspace = true }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-pubkey = { workspace = true }
solders-hash = { workspace = true }
