[package]
name = "solders-bankrun"
version = "0.14.4"
edition = "2021"
include = ["/src"]
license = "MIT"
repository = "https://github.com/kevinheavey/solders"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
solders-macros = { workspace = true }
solders-primitives = { workspace = true }
solders-pubkey = { workspace = true }
solders-traits = { workspace = true, features = ["banks-client"]}
solders-account = { workspace = true }
solders-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
solana-banks-client = { workspace = true }
solana-banks-interface = { version = "1.15.2" }
tarpc = { version = "0.29.0" }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
