cargo-features = ["workspace-inheritance"]

[package]
name = "solders-banks-interface"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders banks interface crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
derive_more = { workspace = true }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
solders-transaction-error = { workspace = true }
solders-transaction-confirmation-status = { workspace = true }
solders-transaction-return-data = { workspace = true }
solders-transaction-status-struct = { workspace = true }
solana-banks-client = { workspace = true }
solana-banks-interface = { version = "1.14.17" }
