[package]
name = "solders-base64-string"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders base64 string crate."

[dependencies]
serde = { workspace = true }
solders-message = { workspace = true }
solders-transaction = { workspace = true }
solana-sdk = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
