[package]
name = "solders-commitment-config"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
solders-traits = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
