[package]
name = "solders-compute-budget"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }

[dependencies]
pyo3 = { workspace = true }
solana-sdk = { workspace = true }
solders-pubkey = { workspace = true }
solders-instruction = { workspace = true }
