[package]
name = "solders-epoch-info"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders epoch info crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
