
[package]
name = "solders-epoch-info"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders epoch info crate."

[dependencies]
derive_more = { workspace = true }
pyo3 = { workspace = true, features = ["macros"] }
serde = { workspace = true }
solana-epoch-info = { workspace = true, features = ["serde"] }
solders-macros = { workspace = true }
solders-traits-core = { workspace = true }
