
[package]
name = "solders-hash"
version = { workspace = true }
edition = { workspace = true }
include = ["/src"]
license = { workspace = true }
repository = { workspace = true }
description = "Solders hash crate."

[dependencies]
pyo3 = { workspace = true, features = ["macros"] }
solders-traits = { workspace = true }
solders-traits-core = { workspace = true }
solders-macros = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
